fix: button colors for Android still showing wrong color

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 
-button {
+.login button,
+.messagebox button {
   color: black;
   background-color: white;
 }
